# FBR_Integration

./: .gitignore  README.md  pyproject.toml
fbr_integration/: fbr_api.py  fbr_tax_calculation.py
fbr_integration/fbr_integration/page/fbr_usage_guide/: fbr_usage_guide.js
fbr_integration/fbr_integration/page/financial_dashboard/: financial_dashboard.html  financial_dashboard.js
fbr_integration/fbr_integration/report/fbr_item_wise/: fbr_item_wise.py
fbr_integration/fixtures/: custom_field.json  print_format.json  report.json  workspace.json
fbr_integration/patches/: fix_tax_payer_type_and_item_hs_mapping.py
fbr_integration/public/css/: financial_dashboard.css
fbr_integration/public/js/: sales_invoice_fbr.js
fbr_integration/public/scenario_docs/: SN001.json  SN002.json  SN003.json  SN004.json  SN005.json  SN006.json  SN007.json  SN008.json  SN009.json  SN010.json  SN011.json  SN012.json  SN013.json  SN014.json  SN015.json  SN016.json  SN017.json  SN018.json  SN019.json  SN020.json  SN021.json  SN022.json  SN023.json  SN024.json  SN025.json  SN026.json  SN027.json  SN028.json
fbr_integration/scenario_data/: build_scenario_docs.py
fbr_integration/scenario_data/source/: DI_Scenarios_Summary.csv
